feat: init buy pixel flow
